traversal.snake.Snake.scala.error
Compilation error:
Snake:28: error: type mismatch;
 found   : Unit
 required: Boolean
      return
      ^Snake:30: error: type mismatch;
 found   : Unit
 required: Boolean
  }
  ^