traversal.snake.Snake.scala.code
override def run() {
  
  def murN:Boolean={
    var a:Direction=
    if(getDirection()==Direction.EST){
      gauche()
      if(estFaceMur==true){
        return true
     
      }else{
        return false

      }
      
    }else if(getDirection()==Direction.OUEST){
        droite()
        if(estFaceMur==true){
        return true
   
              }else{
          return false
     
        }
      
    }else if(estFaceMur==true){
        return true
  }else{
      return
    }
  }
  
  
  def fini:Boolean ={
    if(estFaceMur==true && murN==true){
      return true
    }else{
      return false
    }
  }
  
  while(fini == false){
    while(estFaceMur==false){
      avance()
    }
    if(getDirection()==Direction.OUEST){
      droite()
      avance()
      droite()
    }else if(getDirection()==Direction.EST){
      gauche()
      avance()
      gauche()
    }else{
      return
    }
  }
}